[package]
name = "perilous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_prototype_lyon = "0.11.0"
bevy_rapier2d = "0.25.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
num-traits = "0.2.18"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
